# megaphone-client

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
examples/demo-client/: main.rs
src/client/: mod.rs
src/dto/: channel.rs
src/model/: constants.rs  feature.rs
