[package]
name = "megaphone"
version = "0.9.5"
edition = "2021"

authors = ["Davide Ghilardi <dghila@d71.dev>"]
description = "Reverse proxy for long running requests and server streaming"
keywords = [ "http", "reverse-proxy", "infrastructure", "cloud" ]
repository = "https://github.com/dghilardi/megaphone-client"
license = "MIT"
readme = "../README.md"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
anyhow = "1.0.75"
rand = "0.8.5"

env_logger = { version = "0.10.0", optional = true }
log = { version = "0.4.17", optional = true }

thiserror = { version = "1.0.37", optional = true }
tokio = { version = "1.21.2", features = ["rt", "macros"], optional = true }
tokio-stream = { version = "0.1.14", optional = true }
futures = { version = "0.3.25", optional = true }

hyper = { version = "0.14.28", optional = true }
hyper-tls = { version = "0.6.0", optional = true }

hex = "0.4.3"

[features]
client = ["log", "thiserror", "futures", "tokio", "tokio-stream", "hyper", "hyper-tls"]
examples = ["client", "env_logger"]

[[example]]
name = "demo-client"
required-features = ["examples"]

[dev-dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
