[package]
name = "megaphone"
version = "0.10.2"
edition = "2021"

authors = ["Davide Ghilardi <dghila@d71.dev>"]
description = "Client library that can be used to subscribe to megaphone channels"
keywords = [ "http", "client", "megaphone", "async", "cloud" ]
repository = "https://github.com/dghilardi/megaphone-client"
license = "MIT"
readme = "README.md"

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
anyhow = "1.0.75"
rand = "0.8.5"

env_logger = { version = "0.11.2", optional = true }
log = { version = "0.4.17", optional = true }

thiserror = { version = "1.0.37", optional = true }
tokio = { version = "1.21.2", features = ["rt", "macros"], optional = true }
tokio-stream = { version = "0.1.14", optional = true }
futures = { version = "0.3.25", optional = true }

hyper = { version = "1.2.0", optional = true }
hyper-util = { version = "0.1.3", features = ["client-legacy", "tokio", "http1"], optional = true }
hyper-tls = { version = "0.6.0", optional = true }
http-body-util = { version = "0.1.0", optional = true }
bytes = { version = "1.5.0", optional = true }

hex = "0.4.3"

[features]
client = ["log", "thiserror", "futures", "tokio", "tokio-stream", "hyper", "hyper-util", "hyper-tls"]
examples = ["client", "env_logger"]

[[example]]
name = "demo-client"
required-features = ["examples"]

[dev-dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
